// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadTitle renders custom class names 1`] = `
<MultipleFileUploadTitle
  className="test"
>
  <div
    className="pf-c-multiple-file-upload__title test"
  />
</MultipleFileUploadTitle>
`;

exports[`MultipleFileUploadTitle renders with expected class names 1`] = `
<MultipleFileUploadTitle>
  <div
    className="pf-c-multiple-file-upload__title"
  />
</MultipleFileUploadTitle>
`;

exports[`MultipleFileUploadTitle renders with title icon 1`] = `
<MultipleFileUploadTitle
  icon="icon"
>
  <div
    className="pf-c-multiple-file-upload__title"
  >
    <MultipleFileUploadTitleIcon>
      <div
        className="pf-c-multiple-file-upload__title-icon"
      >
        icon
      </div>
    </MultipleFileUploadTitleIcon>
  </div>
</MultipleFileUploadTitle>
`;

exports[`MultipleFileUploadTitle renders with title text 1`] = `
<MultipleFileUploadTitle
  text="text"
>
  <div
    className="pf-c-multiple-file-upload__title"
  >
    <MultipleFileUploadTitleText>
      <div
        className="pf-c-multiple-file-upload__title-text"
      >
        text 
      </div>
    </MultipleFileUploadTitleText>
  </div>
</MultipleFileUploadTitle>
`;

exports[`MultipleFileUploadTitle renders with title text separator 1`] = `
<MultipleFileUploadTitle
  text="text"
  textSeparator="text separator"
>
  <div
    className="pf-c-multiple-file-upload__title"
  >
    <MultipleFileUploadTitleText>
      <div
        className="pf-c-multiple-file-upload__title-text"
      >
        text 
        <MultipleFileUploadTitleTextSeparator>
          <div
            className="pf-c-multiple-file-upload__title-text-separator"
          >
            text separator
          </div>
        </MultipleFileUploadTitleTextSeparator>
      </div>
    </MultipleFileUploadTitleText>
  </div>
</MultipleFileUploadTitle>
`;
